tests/ui/patterns.stderr
error: the `y @ _` pattern can be written as just `y`
  --> $DIR/patterns.rs:10:9
   |
10 |         y @ _   => (),
   |         ^^^^^
   |
   = note: #[deny(redundant_pattern)] implied by #[deny(clippy)]
note: lint level defined here
  --> $DIR/patterns.rs:4:9
   |
4  | #![deny(clippy)]
   |         ^^^^^^

error: aborting due to previous error

